--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,27 +1,13 @@
+// Colours
+// Colours from: https://www.colourlovers.com/palette/623761/Walking_Away
+$col-background: #F6F6F6;
+$col-text: #333333;
+$col-link: #990100;
+$col-hover: #B90504;
+$col-border: #E8E8E8;
 
-//
-// VARIABLES
-//
-
-// Colors
-$blue: #4183C4;
-
-// Grays
-$black: #000;
-$darkerGray: #222;
-$darkGray: #333;
-$gray: #666;
-$lightGray: #eee;
-$white: #fff;
-
-// Font stacks
-$helvetica: Helvetica, Arial, sans-serif;
-$helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$georgia: Georgia, serif;
-
-// Mobile breakpoints
-@mixin mobile {
-  @media screen and (max-width: 640px) {
-    @content;
-  }
-}
+// Fonts
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+$system-fonts: font-family: 'Libre Franklin', sans-serif;
+$font-size-default: 18px;
+$line-height-default: 1.5;
