--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,6 +8,6 @@ $col-border: #E8E8E8;
 
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-$system-fonts: font-family: 'Libre Franklin', sans-serif;
+$fonts: font-family: 'Libre Franklin', sans-serif;
 $font-size-default: 18px;
 $line-height-default: 1.5;
