--- a/style.scss
+++ b/style.scss
@@ -1,289 +1,153 @@
 ---
 ---
 
-//
-// IMPORTS
-//
-
-@import "reset";
 @import "variables";
-// Syntax highlighting @import is at the bottom of this file
-
-/**************/
-/* BASE RULES */
-/**************/
 
 html {
-  font-size: 100%;
+  font-family: $fonts;
+  font-size: calc(#{$font-size-default} + 0.5vw);
+  line-height: $line-height-default;
+  overflow-wrap: break-word;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: transparent;
+
+  background: $col-background;
+  color: $col-text;
 }
 
 body {
-	background: $white;
-  font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  margin: 0;
+  overflow-x: hidden;
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 740px;
-  padding: 0 10px;
-  width: 100%;
+header {
+  padding: 2rem 2rem 5rem;
+  border-top: .6rem solid $col-border;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
-  color: $darkerGray;
+.header-logo {
+  font-size: 1.75rem;
   font-weight: bold;
-
-  line-height: 1.7;
-  margin: 1em 0 15px;
-  padding: 0;
-
-  @include mobile {
-    line-height: 1.4;
-  }
-}
-
-h1 {
-  font-size: 30px;
-  a {
-    color: inherit;
-  }
-}
-
-h2 {
-  font-size: 24px;
-}
-
-h3 {
-  font-size: 20px;
-}
-
-h4 {
-  font-size: 18px;
-  color: $gray;
-}
-
-p {
-  margin: 15px 0;
-}
-
-a {
-  color: $blue;
+  line-height: 1;
   text-decoration: none;
-	cursor: pointer;
-  &:hover, &:active {
-    color: $blue;
+  color: $col-text;
+
+  &:hover {
+    text-decoration: underline;
+  }
+
+  &:link, &:visited {
+    color: $col-text
   }
 }
 
-ul, ol {
-  margin: 15px 0;
-  padding-left: 30px;
-}
 
-ul {
-  list-style-type: disc;
-}
-
-ol {
-  list-style-type: decimal;
-}
-
-ol ul, ul ol, ul ul, ol ol {
-  margin: 0;
-}
-
-ul ul, ol ul {
-  list-style-type: circle;
-}
-
-em, i {
-  font-style: italic;
-}
-
-strong, b {
-  font-weight: bold;
-}
-
-img {
-  max-width: 100%;
-}
-
-// Fixes images in popup boxes from Google Translate
-.gmnoprint img {
-  max-width: none;
-}
-
-.date {
-  font-style: italic;
-  color: $gray;
-}
-
-// Specify the color of the selection
-::-moz-selection {
-  color: $black;
-  background: $lightGray;
-}
-::selection {
-  color: $black;
-  background: $lightGray;
-}
-
-// Nicolas Gallagher's micro clearfix hack
-// http://nicolasgallagher.com/micro-clearfix-hack/
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/*********************/
-/* LAYOUT / SECTIONS */
-/*********************/
-
-//
-// .masthead
-//
-
-.wrapper-masthead {
-  margin-bottom: 50px;
-}
-
-.masthead {
-  padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
-
-  @include mobile {
-    text-align: center;
-  }
-}
-
-.site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-
-  img {
-    border-radius: 5px;
-  }
-}
-
-.site-info {
-  float: left;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-}
-
-.site-name {
-  margin: 0;
-  color: $darkGray;
-  cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
-}
-
-.site-description {
-  margin: -5px 0 0 0;
-  color: $gray;
-  font-size: 16px;
-
-  @include mobile {
-    margin: 3px 0;
-  }
-}
-
-nav {
-  float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
-  font-size: 18px;
-
-  @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
-  }
+.header-nav {
+  margin: .5rem 0 0;
+  line-height: 1.75rem;
 
   a {
-    margin-left: 20px;
-    color: $darkGray;
-    text-align: right;
-    font-weight: 300;
-    letter-spacing: 1px;
+    margin: 0 .5rem 0 0;
+  }
 
-    @include mobile {
-      margin: 0 10px;
-      color: $blue;
+  @media (min-width: 600px) {
+    margin: 0;
+    float: right;
+
+    a {
+      margin: 0 0 0 1rem;
+      text-align: right;
     }
   }
 }
 
-//
-// .main
-//
-
-.posts > .post {
-  padding-bottom: 2em;
-  border-bottom: 1px solid $lightGray;
+main {
+  display: block;
+  max-width: 32rem;
+  margin: 0 auto;
+  padding: 2rem;
 }
 
-.posts > .post:last-child {
-  padding-bottom: 1em;
-  border-bottom: none;
+* + * {
+  margin-top: 1.5rem;
 }
 
-.post {
-  blockquote {
-    margin: 1.8em .8em;
-    border-left: 2px solid $gray;
-    padding: 0.1em 1em;
-    color: $gray;
-    font-size: 22px;
-    font-style: italic;
+p + p {
+  margin-top: 0.75rem;
+}
+
+li + li {
+  margin-top: 0.25rem;
+}
+.post + .post {
+  padding-top: 1.5rem;
+  border-top: 1px solid $col-border;
+}
+
+.read-more, .date {
+  text-transform: uppercase;
+  font-size: 0.6rem;
+}
+
+
+:focus {
+  outline: .125rem solid $col-hover;
+  outline-offset: .125rem;
+}
+
+a {
+  color: $col-link;
+
+  &:link, &:visited {
+    color: $col-link;
   }
 
-  .comments {
-    margin-top: 10px;
-  }
-
-  .read-more {
-    text-transform: uppercase;
-    font-size: 15px;
+  &:hover, &:active, &:focus {
+    color: $col-hover;
   }
 }
 
-.wrapper-footer {
-  margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
+h1, h2, h3 {
+  font-weight: bold;
+  line-height: 1.1;
+  margin-bottom:0;
 }
 
-footer {
-  padding: 20px 0;
-  text-align: center;
+h1 {
+  font-size: 3rem;
+  margin-top: 0;
 }
 
-// Settled on moving the import of syntax highlighting to the bottom of the CSS
-// ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
-@import "highlights";
-@import "svg-icons";
+h2 {
+  font-size: 1.75rem;
+}
+
+h3 {
+  font-size: 1rem;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+
+h3 + p {
+  margin-top: 0.5rem;
+}
+
+blockquote {
+  padding: 0.25rem 1rem;
+  margin-left: 0;
+  margin-right: 0;
+  background: lighten($col-border, 5%);
+  border-left: 1rem solid $col-border;
+}
+
+.visually-hidden {
+    position: absolute;
+    top: auto;
+    left: -9999rem;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
