--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,6 +7,6 @@ $col-hover: #B90504;
 $col-border: #E8E8E8;
 
 // Fonts
-$fonts: 'Libre Franklin', sans-serif;
+$fonts: 'Fira Sans', sans-serif;
 $font-size-default: 18px;
 $line-height-default: 1.5;
