--- a/style.scss
+++ b/style.scss
@@ -24,30 +24,31 @@ body {
 }
 
 header {
-  padding: 2rem 2rem 5rem;
-  border-top: .6rem solid $col-border;
+  background: $col-border;
+  max-width: 32rem;
+  margin: 0 auto;
+  padding: 1rem .5rem;
 }
 
 .header-logo {
-  font-size: 1.75rem;
+  font-size: 1rem;
   font-weight: bold;
   line-height: 1;
   text-decoration: none;
-  color: $col-text;
+  letter-spacing: 4px;
 
   &:hover {
     text-decoration: underline;
   }
 
-  &:link, &:visited {
-    color: $col-text
+  &:link, &:visited, &:hover, &:active, &:focus {
+    color: $col-text;
   }
 }
 
 
 .header-nav {
   margin: .5rem 0 0;
-  line-height: 1.75rem;
 
   a {
     margin: 0 .5rem 0 0;
