--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,14 @@
 
   <body>
     <header>
-      <a class="header-logo" href="{{ site.baseurl }}/">{{ site.name }}</a>
+      <div class="header-container">
+        <a class="header-logo" href="{{ site.baseurl }}/">{{ site.name }}</a>
 
-      <nav class="header-nav">
-        <a href="{{ site.baseurl }}/">Blog</a>
-        <a href="{{ site.baseurl }}/about">About</a>
-      </nav>
+        <nav class="header-nav">
+          <a href="{{ site.baseurl }}/">Blog</a>
+          <a href="{{ site.baseurl }}/about">About</a>
+        </nav>
+      </div>
     </header>
 
     <main role="main">
