--- a/style.scss
+++ b/style.scss
@@ -38,6 +38,7 @@ header {
   font-weight: bold;
   line-height: 1;
   text-decoration: none;
+  text-transform: uppercase;
   letter-spacing: 4px;
 
   &:hover {
