--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,7 @@ header {
 .header-container {
   max-width: 36rem;
   margin: 0 auto;
-  padding: 1rem 0;
+  padding: 1rem 2rem;
 }
 
 .header-logo {
